# ChatIA

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  instrucoes-cicd-aws.md
.github/workflows/: build-and-push.yml  ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py  settings.py
backend/app/services/: llm_client.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: ChatPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
infra/aws/: ecr_repositories.txt  steps.md
infra/aws/ecs/: task-backend.json  task-frontend.json
infra/aws/github/: notes-secrets.md
infra/aws/load_balancer/: notes.md
